# email-reply-suggestion-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
backend/app/: main.py
backend/app/api/routes/: calibration.py  dataset.py  evaluate.py  history.py  holdout.py  suggest.py
backend/app/core/: config.py  logging.py
backend/app/domain/: schemas.py
backend/app/infra/: cache.py  db.py  groq_client.py
backend/app/services/calibration/: baseline_comparator.py  calibration_runner.py  stability_check.py
backend/app/services/dataset/: loader.py  schema.py  splitter.py
backend/app/services/evaluation/: aggregator.py  base.py  lexical_similarity.py  llm_judge.py  rule_checks.py
backend/app/services/generation/: base.py  groq_generator.py  prompt_templates.py
backend/app/services/retrieval/: base.py  tfidf_retriever.py
backend/data/: calibration_set.jsonl  email_reply_dataset.jsonl
backend/scripts/: build_dataset.py  run_calibration.py  run_holdout_eval.py
backend/tests/integration/: test_calibration_sanity.py
backend/tests/unit/: test_aggregator.py  test_lexical_similarity.py  test_llm_judge.py  test_retrieval.py  test_rule_checks.py
frontend/: app.js  index.html  style.css
